--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title:       Pixyll
-email:       your_email@example.com
-author:      John Otander
-description: "A simple, beautiful theme for Jekyll that emphasizes content rather than aesthetic fluff."
+title:	     Erik Olivier's Work
+email:       erikolivierdr@gmail.com
+author:      Erik-Olivier Riendeau
+description: "Blog that describe some of my projects."
 baseurl:     ""
-url:         "http://pixyll.com"
+url:         "https://erikmagic.github.io"
 date_format: "%b %-d, %Y"
 header_pages:
  - about.md
@@ -24,7 +24,7 @@ animated:             false
 show_related_posts:   false
 show_post_footers:    false
 show_social_icons:    false
-ajaxify_contact_form: false
+ajaxify_contact_form: true
 enable_mathjax: false
 extended_fonts: false
 enable_anchorjs: false
@@ -107,7 +107,7 @@ text:
       sending:  'sending..'
       sent:     'Message sent!'
       error:    'Error!'
-  thanks: 'Thanks for contacting us. We will reply as soon as possible.'
+  thanks: 'Thanks for contacting me.I will reply as soon as possible.'
   og_locale: 'en_US'
 
 # Build settings
