--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-# Site settings
+#Site settings
 title:	     Erik Olivier's Work
 email:       erikolivierdr@gmail.com
 author:      Erik-Olivier Riendeau
@@ -24,8 +24,8 @@ animated:             false
 show_related_posts:   false
 show_post_footers:    false
 show_social_icons:    false
-ajaxify_contact_form: true
-enable_mathjax: false
+ajaxify_contact_form: false
+enable_mathjax: false 
 extended_fonts: false
 enable_anchorjs: false
 # Preview image for social media aka og:image and twitter:image
