change blog title from work to project

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 #Site settings
-title:	     Erik Olivier's Work
+title:	     Erik Olivier's Projects
 email:       erikolivierdr@gmail.com
 author:      Erik-Olivier Riendeau
 description: "Blog that describe some of my projects."
